[AF][IOS] Fixes the GooglePay logo animation in the FormSuggestionView

After crrev.com/c/1078871 that updated FormSuggestionView and
FormSuggestionLabel to use AutoLayout, the Google Pay logo stopped
animating. This CL fixes that regression and also changes the code
slightly so that the subviews are more lazily created.

Bug: 852890
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5388a3c4a7df2819e14b5772368e07f16c98564e
Reviewed-on: https://chromium-review.googlesource.com/1101543
Commit-Queue: Moe Ahmadi <mahmadi@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567997}
Former-commit-id: bfbf03748d4e012f16ba1e046d29b6de9e771f74